--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ main = "src/api/index.ts"
 compatibility_date = "2024-12-01"
 
 routes = [
-  { pattern = "api.ekadasi.bhaktilatam.com/*", zone_name = "bhaktilatam.com" }
+  { pattern = "ekadasi-api.bhaktilatam.com/*", zone_name = "bhaktilatam.com" }
 ]
 
 [vars]
