Agregar bot de Telegram con soporte bilingüe - Nueva tabla telegram_subscribers y telegram_notifications - Handler de Telegram con comandos: /start, /proximo, /reglas, /stop - Soporte ES/EN con español como idioma default - Comando /reglas con resumen de reglas de ayuno - Webhook registrado automáticamente - Notificaciones integradas en el cron diario

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "declaration": true,
     "types": ["@cloudflare/workers-types"]
   },
-  "include": ["src/**/*", "scripts/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
