Agregar Cloudflare Cron Trigger para notificaciones - Configurar cron cada hora (0 * * * *) - Agregar scheduled handler en el API - Las notificaciones de WhatsApp y Telegram se envían automáticamente

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,6 +9,10 @@ routes = [
 [vars]
 ENVIRONMENT = "production"
 
+# Cron triggers - ejecutar notificaciones cada hora
+[triggers]
+crons = ["0 * * * *"]
+
 # Turso database - configurar después de crear la DB
 # [env.production.vars]
 # TURSO_DATABASE_URL = "libsql://tu-db.turso.io"
